Update to 1.21(.1)
Lotssssssss of changes, seems to be working fine now though.